--- a/src/components/ChainSelector/chain-selector.module.scss
+++ b/src/components/ChainSelector/chain-selector.module.scss
@@ -39,6 +39,9 @@
   background-color: white;
   border-radius: 10px;
   overflow: hidden;
+  z-index: 10;
+  position: relative;
+  box-shadow: 0px 4px 12px rgba(0,0,0,0.03),0px 1px 4px rgba(0,0,0,0.04),0px 20px 40px rgba(0,0,0,0.04);
 }
 
 .arrow {
