--- a/src/components/ChainOption/chain-option.module.scss
+++ b/src/components/ChainOption/chain-option.module.scss
@@ -8,6 +8,7 @@
   font-size: 14px;
   line-height: 20px;
   user-select: none;
+  cursor: pointer;
 
   &__icon {
     height: 30px;
@@ -28,5 +29,16 @@
 
   &.active {
     font-weight: 500;
+  }
+
+  &.small{
+    height: 40px;
+    padding: 10px;
+
+    &__icon {
+      height: 20px;
+      width: 20px;
+      margin-right: 10px;
+    }
   }
 }
