--- a/src/components/Modal/modal.module.scss
+++ b/src/components/Modal/modal.module.scss
@@ -6,20 +6,24 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.4);
   z-index: 9999;
-  display: flex;
   justify-content: center;
   align-items: center;
+  display: none;
+
+  &.show{
+    display: flex;
+  }
 }
 
 .modal {
   width: 100%;
-  max-width: 400px;
+  max-width: 360px;
   height: 400px;
   background: #fff;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  // box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -38,7 +42,8 @@
 }
 
 .modalBody {
-  padding: 15px;
+  padding: 15px 15px 0;
+  margin-bottom: 15px;
   height: calc(100% - 50px);
   overflow-y: auto;
   width: 100%;
