--- a/src/components/TokenSelector/token-selector.module.scss
+++ b/src/components/TokenSelector/token-selector.module.scss
@@ -4,23 +4,45 @@
   height: 50px;
   border-radius: 10px;
   border: 1px solid $gray-color;
-  padding: 5px 5px 5px 15px;
+  padding: 0;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .tokensSection {
-  border: 1px solid $gray-color;
-  border-radius: 7px;
+  border-left: 1px solid $gray-color;
   position: relative;
+  width: 130px;
+  overflow: hidden;
+  height: 100%;
+  display: flex; 
+  align-items: center;
+  align-self: flex-end;
 }
 
 .tokenOption{
-    padding-right: 20px !important;
+    padding-right: 25px !important;
+    width: 100%;
+
+    span{
+      max-width: 80px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      text-transform: none !important;
+
+      span:last-child{
+        display:none;
+      }
+    }
 }
 
 .tokenOptionList{
-  border-radius: 5px;
+  border-radius: 7px;
+  &:not(:last-child){
+    margin-bottom: 5px;
+  }
 }
 
 .arrow {
@@ -28,10 +50,50 @@
   right: 5px;
   height: 20px;
   width: 20px;
-  top: 10px;
+  top: 15px;
   transition: all ease-in-out 0.2s;
 
   &.up {
     transform: rotate(180deg);
   }
+}
+
+.maxBtn{
+  border: 0;
+  outline: none;
+  background-color: transparent;
+  font-size: 12px; 
+  text-transform: uppercase;
+  display: flex;
+  padding: 4px 6px;
+  border-radius: 3px;
+  margin: 0 5px;
+
+  &:focus, &.active{
+    outline:none;
+  }
+
+  &:hover{
+    background-color: $highlight-color;
+  }
+}
+
+.input{
+  padding-left: 10px;
+  border: 0; 
+  outline: none;
+  font-weight: 500;
+  width: calc(100% - 190px);
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
