--- a/src/components/TokenSelector/token-selector.module.scss
+++ b/src/components/TokenSelector/token-selector.module.scss
@@ -86,6 +86,11 @@
   width: calc(100% - 190px);
 }
 
+.noTokensText{
+  font-size: 12px; 
+  text-align:center;
+}
+
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
