add: transitions to chain and token sections

--- a/src/components/Button/button.module.scss
+++ b/src/components/Button/button.module.scss
@@ -19,4 +19,13 @@
       width: 100%;
       justify-content: center;
   }
+
+  &:disabled{
+    opacity: 0.6;
+    cursor: not-allowed;
+
+    &:hover{
+      background-color: #000;
+    }
+  }
 }
