--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables";
+
 .header{
     height: 80px;
     padding: 0 40px;
@@ -14,4 +16,54 @@
 
 .name{
     font-size: 17px;
+}
+
+.account{
+    background-color: white;  
+    display:flex; 
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    padding: 0 20px;
+    color: #333;
+    border-radius: 10px;
+    font-size: 14px;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+    user-select: none;
+
+    &__profile{
+        position: absolute;
+        top: 54px;
+        right: 0; 
+        border-radius: 10px;
+        background-color: #fff;
+        width:  300px;
+        font-weight: 400;
+        z-index: 11;
+
+        &__header{
+            padding: 20px;
+            border-bottom: 1px solid $highlight-color;
+        }
+
+        &__content{
+            padding: 20px;
+
+            &__button{
+                display: flex; 
+                height: 36px; 
+                line-height: 36px;
+                text-align:center;
+                background-color: $highlight-color;
+                border-radius: 4px; 
+                border: 0; 
+                padding: 0 20px;
+                outline: none;
+                display: block; 
+                font-size: 14px;
+            }
+        }
+    }
 }
