add: quotes section

--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -7,8 +7,8 @@
     // transform: scale(1);
 
     &.minimize{
-        transform: scale(0.9);
-        margin:auto;
+        transform: scale(0.82);
+        margin:0 auto;
         padding: 16px;
         border-radius: 10px;
         background-color: #F3F4F6;
