--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -42,6 +42,7 @@
         width:  300px;
         font-weight: 400;
         z-index: 11;
+        box-shadow: 0px 4px 12px rgba(0,0,0,0.03),0px 1px 4px rgba(0,0,0,0.04),0px 20px 40px rgba(0,0,0,0.04);
 
         &__header{
             padding: 20px;
